--- a/RobotVoiceControlMobileApp/RobotVoiceControlMobileApp/MainPage.xaml
+++ b/RobotVoiceControlMobileApp/RobotVoiceControlMobileApp/MainPage.xaml
@@ -1,9 +1,35 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="RobotVoiceControlMobileApp.MainPage">
+             x:Class="RobotVoiceControlMobileApp.MainPage"
+             Title="Robot Voice Control">
+
+    <NavigationPage.TitleView>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="40"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="50"/>
+            </Grid.ColumnDefinitions>
+
+            <Label Text="Robot Voice Control" FontSize="Title" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
+            <ImageButton x:Name="btnConnect" Source="disconnected.png" Grid.Column="1" Clicked="btnConnect_Clicked"/>
+            <!--<Button x:Name="btnConnect"  Grid.Column="1" Clicked="btnConnect_Clicked"/>-->
+            <ActivityIndicator x:Name="indicatorBLE" Grid.Column="1" IsRunning="False" />
+        </Grid>
+    </NavigationPage.TitleView>
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Order="Secondary"
+                     Text="Settings"
+                     Priority="1"
+                     Clicked="ShowSettings" />
+    </ContentPage.ToolbarItems>
 
     <StackLayout>
+        <!--
         <Frame BackgroundColor="DeepSkyBlue" CornerRadius="0">
             <Grid>
                 <Grid.RowDefinitions>
@@ -16,10 +42,10 @@
                 
                 <Label Text="Robot Voice Control" FontSize="Title" HorizontalTextAlignment="Center" />
                 <ImageButton x:Name="btnConnect" Source="disconnected.png" Grid.Column="1" Clicked="btnConnect_Clicked"/>
-                <!--<Button x:Name="btnConnect"  Grid.Column="1" Clicked="btnConnect_Clicked"/>-->
                 <ActivityIndicator x:Name="indicatorBLE" Grid.Column="1" IsRunning="False" />
             </Grid>
         </Frame>
+        -->
 
         <Grid Margin="10" HorizontalOptions="Center" VerticalOptions="CenterAndExpand">
             <Grid.RowDefinitions>
@@ -58,7 +84,6 @@
             <Button x:Name="btnEN" Text="EN" Grid.Column="0" Grid.Row="1" Clicked="btnEN_Clicked"/>
             <Button x:Name="btnCZ" Text="CZ" Grid.Column="2" Grid.Row="1" Clicked="btnCZ_Clicked" IsVisible="False"/>
             <ActivityIndicator x:Name="indicatorVR" Grid.Column="1" Grid.Row="1" IsRunning="False" />
-            
         </Grid>
 
         <Button x:Name="btnFollow" Text="Follow" Clicked="btnFollow_Clicked" BackgroundColor="DeepSkyBlue" VerticalOptions="End"/>
